# Smart-CV-Matching-using-AI-and-NLP

./: .gitignore  README.md
backend/: config.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/models/: __init__.py  database.py
backend/services/: __init__.py  auth_service.py  cv_parser.py  embedding_service.py  evaluation_service.py  recommendation_service.py  skill_service.py
data/: create_data.py
data/cv_jd_pairs/: test_cv_jd_pairs.csv  train_cv_jd_pairs.csv
data/processed/: test_dataset.csv  train_dataset.csv
frontend/: .gitignore  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/candidate/: layout.tsx  page.tsx
frontend/app/candidate/applications/: page.tsx
frontend/app/candidate/jobs/: page.tsx
frontend/app/candidate/recommendations/: page.tsx
frontend/app/candidate/resume/: page.tsx
frontend/app/candidate/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/app/recruiter/: layout.tsx  page.tsx
frontend/app/recruiter/candidates/: page.tsx
frontend/app/recruiter/jobs/: page.tsx
frontend/app/recruiter/settings/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts  auth-context.tsx  resume-context.tsx
train_test_data/: notes.txt  train_evaluate.py  train_evaluate_models.py
train_test_data/output/: config.json  evaluation_report.txt  model_metrics.csv
train_test_data/output/models/: TF-IDF.pkl  Word2Vec.pkl
train_test_data/results/: evaluation_report.txt  model_metrics.csv  model_metrics.json
train_test_data/results/sbert_finetuned_cv_jd/: README.md
(+3 files in other folders)
